--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~9.1.3",
     "@angular/core": "~9.1.3",
     "@angular/forms": "~9.1.3",
+    "@angular/google-maps": "^9.2.2",
     "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "firebase": "^7.14.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "unsplash-js": "^6.0.0",
